--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc && node ./dist/index.js"
+    "dev": "npx tsc && node ./dist/index.js",
+    "start:prod": "npx tsc && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
