--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc && node ./dist/index.js",
+    "dev": "tsx watch ./src/index.ts",
+    "start": "npx tsc && node ./dist/index.js",
     "start:prod": "npx tsc && node ./dist/index.js"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "@types/node": "^20.12.12",
     "@types/ws": "^8.5.10",
     "dotenv": "^16.4.5",
+    "tsx": "^4.16.0",
     "typescript": "^5.4.5"
   }
 }
